# pybustools

./: .gitignore  .travis.yml  Cargo.toml  README.md  busio.py  pybustools.py  pyproject.toml  setup.py
kaitai/: busfile.py  busformat.ksy  kaitai_test.py
pybustools/: __init__.py  amplification.py  busio.py  busio_old.py  butterfly.py  count.py  em.py  parallel_generators.py  pug.py  pug_parallel.py  pybus.py  pybustools.py  seqerrors.py  subsampling.py  utils.py
speed/: results.csv  speed_buffersize.py  speedtesting.py
speed/encoding/: iotest_pyx.pyx  iox.pyx  speedtest.py
src/: build.rs  butterfly.rs  counting.rs  lib.rs  phantom.rs  python_module.rs
src/snapshots/: pybustools__butterfly__testing__insta_make_ecs.snap  pybustools__butterfly__testing__insta_make_ecs_cb.snap  pybustools__butterfly__testing__insta_make_ecs_ec-2.snap  pybustools__butterfly__testing__insta_make_ecs_ec-3.snap  pybustools__butterfly__testing__insta_make_ecs_ec-4.snap  pybustools__butterfly__testing__insta_make_ecs_ec-5.snap  pybustools__butterfly__testing__insta_make_ecs_ec-6.snap  pybustools__butterfly__testing__insta_make_ecs_ec.snap
testing/: fixtures.py  test_butterfly.py  test_io.py  test_iterators.py  test_merge_iterators.py  test_parallel_generators.py  test_subsampling.py
