[package]
name = "rustpybustools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustpybustools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
numpy = "0.20.0"
thiserror = "1"
ndarray = { version = "0.15.4", features = ["approx", "rayon"] }
bustools="0.9.2"
# bustools_cli="0.2.2"
bustools_cli = { path = "/home/michi/Dropbox/rustbustools_cli" }
