[package]
name = "pybustools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybustools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.21.0"

# not sure why these were dependencies
#numpy = "0.20.0"
#thiserror = "1"
#ndarray = { version = "0.15.4", features = ["approx", "rayon"] }

bustools="0.14"
#bustools = { path = "/home/michi/Dropbox/rustbustools" }
bustools_cli="0.3.2"
#bustools_cli = { path = "/home/michi/Dropbox/rustbustools_cli" }

#rustphantompurger = { path = "/home/michi/Dropbox/rustphantompurger" }
insta = { version = "1.39.0", features = ["yaml"] }
polars = { version = "0.41"}
pyo3-polars = "0.15"
indicatif = "0.17"
itertools="0.12"
rand = "0.8"
